--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -159,7 +159,7 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FeldCareConnects/743999691848201-speech-language-pathologist-slp-needed-for-home-health-in-rowland-heights'>FeldCare Connects Speech Language Pathologist (SLP) Needed for Home Health in Rowland Heights | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/FeldCareConnects/743999691848201-speech-language-pathologist-slp-needed-for-home-health-in-rowland-heights'>FeldCare Connects Speech Language Pathologist (SLP) Needed for Home Health in Rowland Heights | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -175,13 +175,13 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 <p><span class="badge badge-light">Austin Austin</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://careers-healthpro-rehab.icims.com/jobs/22513/speech-language-pathologist---prn/job'>Speech Language Pathologist - PRN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-healthpro-rehab.icims.com/jobs/22513/speech-language-pathologist---prn/job'>Speech Language Pathologist - PRN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 2, 2019 ... Manistee County Medical Care Facility is now hiring a Speech Language 
 Pathologist - PRN in Manistee, Michigan. Review all of the job details and apply 
 today!</p>
 <hr/>
-<h5><a href='https://careers-therapymgmt.icims.com/jobs/6342/part-time-speech-language-pathologist---shreveport%2C-la/job'>Part Time Speech Language Pathologist - Shreveport, LA in ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-therapymgmt.icims.com/jobs/6342/part-time-speech-language-pathologist---shreveport%2C-la/job'>Part Time Speech Language Pathologist - Shreveport, LA in ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 7, 2019 ... WW - Heritage Manor West is now hiring a Part Time Speech Language 
 Pathologist - Shreveport, LA in Shreveport, Louisiana. Review all of the job 
@@ -226,7 +226,7 @@ Education Support. Full-Time 2019-2020 School Year. Apply for this job.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/accentcare/job/o2P09fwK'>AccentCare, Inc.? Careers - Speech Language Pathologist PRN DeSoto TX</a></h5> 
+<h5><a href='http://jobs.jobvite.com/accentcare/job/o2P09fwK'>AccentCare, Inc.? Careers - Speech Language Pathologist PRN DeSoto TX</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
@@ -269,7 +269,7 @@ details?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/accentcare/job/oRptafwD'>AccentCare, Inc.? Careers - Speech Language Pathologist SLP PRN Marble Falls TX</a></h5> 
+<h5><a href='http://jobs.jobvite.com/accentcare/job/oRptafwD'>AccentCare, Inc.? Careers - Speech Language Pathologist SLP PRN Marble Falls TX</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -293,7 +293,7 @@ details?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/aces/jobs/1728604'>Job Application for Speech Language Therapist (SLP, SLPA)  at ACES (Autism Comprehensive Educational Services)</a></h5> 
+<h5><a href='https://boards.greenhouse.io/aces/jobs/1728604'>Job Application for Speech Language Therapist (SLP, SLPA)  at ACES (Autism Comprehensive Educational Services)</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
@@ -325,7 +325,7 @@ details?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<h5><a href='https://healthscope.referrals.selectminds.com/jobs/speech-pathologist-3057'>Speech Pathologist - Healthscope Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://healthscope.referrals.selectminds.com/jobs/speech-pathologist-3057'>Speech Pathologist - Healthscope Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Qualified Speech Pathologist wanted for casual HP3 role; Professional and 
 supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
@@ -390,7 +390,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cortica/jobs/4338467002'>Job Application for Speech Language Pathologist at Cortica</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cortica/jobs/4338467002'>Job Application for Speech Language Pathologist at Cortica</a></h5> 
 <p><span class="badge badge-light">Torrance, CA</span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
@@ -430,7 +430,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-06-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://orlandohealth.csod.com/ats/careersite/JobDetails.aspx?id=8378&site=1&source=12'>Speech Language Pathologist (Weekend Option) (Pool) - OHRI (Days) - req8378</a></h5> 
+<h5><a href='https://orlandohealth.csod.com/ats/careersite/JobDetails.aspx?id=8378&site=1&source=12'>Speech Language Pathologist (Weekend Option) (Pool) - OHRI (Days) - req8378</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-06-26</p>
 <hr/>
@@ -458,7 +458,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-06-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
